--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dev = [
     "sphinxcontrib-typer>=0.5.1",
     "sphinx-new-tab-link>=0.8.0",
     "virtualenv>=20.36.1",
+    "pytest-mock>=3.15.1",
 ]
 containers = ["deepteam==1.0.4", "litellm>=1.76.0", "openevals>=0.1.0"]
 
